<resources>
    <string name="app_name">ThriveMatch</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    // Welcome Page-->
    <string name="welcome_page_title">Investment Alchemy In Action</string>
    <string name="welcome_message">Find your perfect investment match and witness the magic of shared growth</string>

    <!--    // Signup and Login-->
    <string name="sign_up">Sign up</string>
    <string name="dont_have_account">Dont have an account? Signup</string>
    <string name="log_in">Log in</string>
    <string name="already_have_account">Already have an account? Login</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="confirm_pass">Confirm Password</string>


    <!--    // Account set up pages-->
    <!--    // Set up step 1.-->
    <string name="account_type">What kind of account are you creating?</string>
    <string name="investor">Investor Account</string>
    <string name="investor_description">Build wealth with strategic investments from up and coming businesses</string>
    <string name="business">Business Account</string>
    <string name="business_description">Fuel your innovation and secure funding for entrepreneurial ventures </string>

    <!--    // Set up step 2: Business form-->
    <string name="about_business">Tell us about your business</string>
    <string name="business_name">Business name</string>
    <string name="industry">Industry</string>
    <string name="year_founded">Year Founded</string>
    <string name="company_desc">Company description</string>

    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>

    <!--    // Set up step 3: Business form-->
    <string name="business_contact">Business Contact Information</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="box">P.O Box</string>

    <!--    // Set up step 4: Business form-->
    <string name="logo">Upload company logo</string>


    <!--    // Set up step 2: Investor form-->
    <string name="about_investor">Tell us about yourself</string>
    <string name="investor_type">Investor type</string>

    <string-array name="investor_type_array">
        <item>Individual Investor</item>
        <item>Investing Company</item>
    </string-array>

    <string name="investor_name">Name or Company Name</string>
    <string name="dec">Description</string>

    <!--    // Set up step 3: Investor form-->
    <string name="pick_industry">Pick 3 industries you are interested in</string>

    <!--    // Set up step 4: Investor form-->
    <string name="profile">Upload profile photo</string>
    <string name="select_image">Tap to select image</string>


    <!--    // Match Strings-->
    <string name="match">Match</string>
    <string name="matched">Matched</string>
    <string name="pending">Pending</string>
    <string name="cong">Congratulations</string>
    <string name="match_made">Match Made!</string>

    <!--    // Chat Strings-->
    <string name="chat">Chat</string>
    <string name="chats">Chats</string>
    <string name="continue_browsing">Continue Browsing</string>
    <string name="search">Search</string>


    <string name="doc">Proposal Documents</string>
    <string name="ok">Okay</string>
    <string name="take_picture">Take Picture</string>
    <string name="take_picture_description">Center your camera</string>


    <!--Bottom Navigation Strings-->
    <string name="liked">Liked</string>
    <string name="home">Home</string>

    <!--    Side Nav Strings-->
    <string name="myAccount">My Account</string>
    <string name="docUpload">Document Center</string>
    <string name="subscription">Subscription</string>
    <string name="logout">Logout</string>

    <!-- Document Centre Strings   -->
    <string name="doc_message">
        Add your relevant documents to display on your profile. You can add up to 5 files </string>

    <string name="recent_uploads">Recent Uploads</string>
    <string name="upload_document">Upload Document</string>
    <string name="document_name">Document Name</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="contacts">Contacts</string>


    <string name="eclectics_whatsapp">0709646000</string>
    <string name="com_whatsapp">com.whatsapp</string>
    <string name="com_whatsapp_conversation">com.whatsapp.Conversation</string>
    <string name="whatsapp_net">\@s.whatsapp.net</string>
    <string name="market_com_whatsapp">market://details?id=com.whatsapp</string>
    <string name="whatsApp_not_installed">WhatsApp not Installed</string>
    <string name="pendingmatch">Pending Matches</string>


</resources>