<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn= "navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:enabled="true"
            android:icon="@drawable/person_icon"
            android:title="@string/home"/>
        <item
            android:id="@+id/myAccountFragment"
            android:enabled="true"
            android:icon="@drawable/person_icon"
            android:title="@string/myAccount"/>
        <item
            android:id="@+id/documentUploadFragment"
            android:enabled="true"
            android:icon="@drawable/upload_icon"
            android:title="@string/docUpload"/>
        <item
            android:id="@+id/subscriptionFragment"
            android:enabled="true"
            android:icon="@drawable/monetization_icon"
            android:title="@string/subscription"/>

        <item
            android:id="@+id/logout_sidenav"
            android:enabled="true"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout"/>
    </group>

</menu>